chore: rename thumbnail parameter from width to size for clarity